Missing expected field "protocolVersion", but that field has a default value

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.2.6, 4.4.0-rc0, 4.7.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v4.4, v4.2
    • Repl 2020-03-09, Repl 2020-03-23
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Command

       

      rs.reconfig(
        {
          _id : "rs",
          members: [
            { _id : 0, host : "..." },
            { _id : 1, host : "..." },
          ]
        }
      )
      
      

       

      Error:

       

      "errmsg" : "Missing expected field \"protocolVersion\""
      "code" : 93
      "codeName" : "InvalidReplicaSetConfig",

       

      However, https://docs.mongodb.com/manual/reference/replica-configuration/#rsconf.protocolVersion documents a default value of 1 for this field.

            Assignee:
            Samyukta Lanka
            Reporter:
            Dan Dascalescu
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: