SERVER-45143 use default value for 'protocolVersion' field during reconfigs

(cherry picked from commit 604c0afc97799516ba37880932948dbb008aa862)